<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_plans_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plans.PlansFragment">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Good day!"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Morning"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle1"
        app:layout_constraintBaseline_toBottomOf="@id/circle1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:id="@+id/afternoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Afternoon"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="@id/circle2"
        app:layout_constraintHorizontal_bias="0.1" />

    <TextView
        android:id="@+id/evening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Evening"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/circle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="@id/circle3"
        app:layout_constraintHorizontal_bias="0.1" />



    <ImageButton
        android:id="@+id/circle1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/settings_btn"
        android:minHeight="48dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintHorizontal_bias="0.12" />

    <View
        android:id="@+id/divider1A"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider1B"
        app:layout_constraintTop_toBottomOf="@id/circle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.12" />

    <View
        android:id="@+id/divider1B"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider1C"
        app:layout_constraintTop_toBottomOf="@id/divider1A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12" />

    <View
        android:id="@+id/divider1C"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/circle2"
        app:layout_constraintTop_toBottomOf="@id/divider1B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12" />

    <ImageButton
        android:id="@+id/circle2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/settings_btn"
        android:minHeight="48dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@id/circle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle1"
        app:layout_constraintHorizontal_bias="0.12" />

    <View
        android:id="@+id/divider2A"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider2B"
        app:layout_constraintTop_toBottomOf="@id/circle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.12" />

    <View
        android:id="@+id/divider2B"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/divider2C"
        app:layout_constraintTop_toBottomOf="@id/divider2A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12" />

    <View
        android:id="@+id/divider2C"
        android:layout_width="6dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/circle3"
        app:layout_constraintTop_toBottomOf="@id/divider2B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12" />

    <ImageButton
        android:id="@+id/circle3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/settings_btn"
        android:minHeight="48dp"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle2"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintHorizontal_bias="0.12" />



    <androidx.cardview.widget.CardView
        android:id="@+id/activity1"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@+id/circle1"
        app:layout_constraintTop_toBottomOf="@id/morning">

        <TextView
            android:id="@+id/noActivity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="No assigned activity"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/activity1Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/meditation_icon"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/activity1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="meditate"
            android:textSize="20sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/activity1Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="10"
            android:textSize="14sp"
            android:visibility="invisible"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@+id/circle2"
        app:layout_constraintTop_toBottomOf="@id/afternoon">

        <TextView
            android:id="@+id/noActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="No assigned activity"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/activity2Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/running_icon"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/activity2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="exercise"
            android:textSize="20sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/activity2Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="10"
            android:textSize="14sp"
            android:visibility="invisible"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity3"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toEndOf="@+id/circle3"
        app:layout_constraintTop_toBottomOf="@id/evening">

        <TextView
            android:id="@+id/noActivity3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="No assigned activity"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/activity3Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/meditation_icon"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/activity3Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="meditate"
            android:textSize="20sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/activity3Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="10"
            android:textSize="14sp"
            android:visibility="invisible"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>