<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_today" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_diary" />

    <item
        android:id="@+id/navigation_plans"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_plans" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_profile" />
</menu>